--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script>
+      // Redirect 404s to index.html for GitHub Pages
+      if (window.location.pathname !== '/') {
+        window.location.href = '/';
+      }
+    </script>
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
